<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:padding="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/heading"
        android:layout_marginBottom="30dp"
        android:text="@string/login" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        style="@style/logo"/>

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_username" />

    <EditText
        android:id="@+id/pass"
        android:layout_below="@id/user"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Tombol"
        android:text="@string/btnlogin"/>

    <Button
        android:id="@+id/btnRegis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/belum_memiliki_akun_register"
        android:textAllCaps="false"
        android:textColor="@color/black"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

<!--    <LinearLayout-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:gravity="center"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal">-->

<!--        <Button-->
<!--            android:id="@+id/btnIndo"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            style="@style/Tombol"-->
<!--            android:text="@string/indonesia"/>-->
<!--        <Button-->
<!--            android:id="@+id/btning"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            style="@style/Tombol"-->
<!--            android:text="@string/inggris"/>-->
<!--    </LinearLayout>-->
</LinearLayout>
