<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:padding="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfilActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/heading"
        android:layout_marginBottom="50dp"
        android:text="@string/profil" />

    <ImageButton
        android:id="@+id/ivImage"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:src="@drawable/gambar" />

    <EditText
        android:id="@+id/namaProfil"
        android:ems="10"
        android:textSize="20dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nama"/>

    <EditText
        android:id="@+id/emailProfil"
        android:ems="10"
        android:textSize="20dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email" />

    <EditText
        android:id="@+id/uProfil"
        android:ems="10"
        android:textSize="20dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Username"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Tombol"
            android:text="@string/ubah"/>
        <Button
            android:id="@+id/btnKeluar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Tombol"
            android:text="@string/keluar"/>
    </LinearLayout>
</LinearLayout>